--- a/index.ejs
+++ b/index.ejs
@@ -104,7 +104,7 @@
             <h3>
                 <%= items.password_s %>
             </h3>
-            <form action="about" method="post">
+            <form action="about/<%= items.id %>" method="post">
                 <button name="foo" value="<%= items.id %>">Send</button>
             </form>
 
